fix(css): élément html - overflow-x: hidden pour éviter une barre horizontale de défilement inutile pour le widget

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -89,6 +89,10 @@
 
 /* LAYOUT PRICIPAL */
 
+html {
+	overflow-x: hidden;
+}
+
 body {
 	margin: 0;
 	display: flex;
